--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,4 +58,18 @@
   }
 }
 
+@layer utilities {
+    @keyframes background-pan {
+        from {
+            background-position: 0% center;
+        }
+        to {
+            background-position: -200% center;
+        }
+    }
+    .animated-gradient {
+        background-size: 200%;
+        animation: background-pan 10s linear infinite;
+    }
+}
     
